Comment a failed job
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/time_zone/tasks/02_time_zone.yml
+++ b/tests/integration/targets/time_zone/tasks/02_time_zone.yml
@@ -20,6 +20,8 @@
       scale_computing.hypercore.time_zone:
         zone: Europe/Ljubljana
       register: result
+    # TODO Do we miss a wait_task?
+    # See failure at https://github.com/ScaleComputing/HyperCoreAnsibleCollection/actions/runs/4098260884/jobs/7067253372
     - scale_computing.hypercore.time_zone_info:
       register: info
     - ansible.builtin.assert:
