Cleanup a_vm integration test
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/a_vm/tasks/01_main.yml
+++ b/tests/integration/targets/a_vm/tasks/01_main.yml
@@ -15,28 +15,16 @@
         state: absent
       register: result
 
+    # integration-test.iso must be already present, we have prepare.yml task
     - name: Get integration-test.iso info
       scale_computing.hypercore.iso_info:
         name: "integration-test.iso"
       register: uploaded_iso_info
-
-    - name: Create a text file
-      command: touch integration.txt
-      when: uploaded_iso_info.records | length == 0
-
-    - name: Create an ISO file
-      command: genisoimage -output integration.iso integration.txt
-      when: uploaded_iso_info.records | length == 0
+    - ansible.builtin.assert:
+        that:
+          - uploaded_iso_info.records | length == 1
 
 # ----------------------------------Job-------------------------------------------------------------------------------------
-    - name: Upload ISO image integration-test.iso to HyperCore API
-      scale_computing.hypercore.iso:
-        name: "integration-test.iso"
-        source: "integration.iso"
-        state: present
-      when: uploaded_iso_info.records | length == 0
-      register: result
-
     - name: Create and start the VM with disks, nics and boot devices set. Attach ISO onto the VM.
       scale_computing.hypercore.vm: &create-vm
         vm_name: vm-integration-test-vm
@@ -195,6 +183,7 @@
           - result.records[0].memory == 536870912
 
 # ----------------------------------Job-------------------------------------------------------------------------------------
+#
     - name: Update the VM 2nd time
       scale_computing.hypercore.vm: &update-vm2
         vm_name: vm-integration-test-vm
