--- a/tests/integration/targets/a_vm/tasks/01_main.yml
+++ b/tests/integration/targets/a_vm/tasks/01_main.yml
@@ -6,6 +6,8 @@
     SC_USERNAME: "{{ sc_username }}"
     SC_PASSWORD: "{{ sc_password }}"
     SC_TIMEOUT: "{{ sc_timeout }}"
+  vars:
+    iso_name: "Porteus-XFCE-v5.0-x86_64.iso"
 
   block:
 # ----------------------------------Cleanup--------------------------------------------------------------------------------
@@ -16,9 +18,9 @@
       register: result
 
     # integration-test.iso must be already present, we have prepare.yml task
-    - name: Get integration-test.iso info
+    - name: Get ISO {{ iso_name }} info
       scale_computing.hypercore.iso_info:
-        name: "integration-test.iso"
+        name: "{{ iso_name }}"
       register: uploaded_iso_info
     - ansible.builtin.assert:
         that:
@@ -44,7 +46,7 @@
             size: "{{ '10.1 GB' | human_to_bytes }}"
           - type: ide_cdrom
             disk_slot: 0
-            iso_name: integration-test.iso
+            iso_name: "{{ iso_name }}"
         nics:
           - vlan: 1
             type: RTL8139
@@ -52,6 +54,8 @@
             type: virtio
         boot_devices:
           - type: virtio_disk
+            disk_slot: 0
+          - type: ide_cdrom
             disk_slot: 0
           - type: nic
             nic_vlan: 1
@@ -74,11 +78,13 @@
           - vm_created.record.0.disks.1.disk_slot == 0
           - vm_created.record.0.disks.0.type == "virtio_disk"
           - vm_created.record.0.disks.0.disk_slot == 0
-          - vm_created.record.0.boot_devices | length == 2
+          - vm_created.record.0.boot_devices | length == 3
           - vm_created.record.0.boot_devices.0.type == "virtio_disk"
-          - vm_created.record.0.boot_devices.1.type == "RTL8139"
+          - vm_created.record.0.boot_devices.1.type == "ide_cdrom"
+          - vm_created.record.0.boot_devices.2.type == "RTL8139"
           - vm_created.record.0.boot_devices.0.disk_slot == 0
-          - vm_created.record.0.boot_devices.1.vlan == 1
+          - vm_created.record.0.boot_devices.1.disk_slot == 0
+          - vm_created.record.0.boot_devices.2.vlan == 1
           - vm_created.record.0.power_state == "started"
           - vm_created.record.0.machine_type == "BIOS"
 
@@ -111,14 +117,21 @@
           - vm_created.records.0.disks.1.disk_slot == 0
           - vm_created.records.0.disks.0.type == "virtio_disk"
           - vm_created.records.0.disks.0.disk_slot == 0
-          - vm_created.records.0.boot_devices | length == 2
+          - vm_created.records.0.boot_devices | length == 3
           - vm_created.records.0.boot_devices.0.type == "virtio_disk"
-          - vm_created.records.0.boot_devices.1.type == "RTL8139"
+          - vm_created.records.0.boot_devices.1.type == "ide_cdrom"
+          - vm_created.records.0.boot_devices.2.type == "RTL8139"
           - vm_created.records.0.boot_devices.0.disk_slot == 0
-          - vm_created.records.0.boot_devices.1.vlan == 1
+          - vm_created.records.0.boot_devices.1.disk_slot == 0
+          - vm_created.records.0.boot_devices.2.vlan == 1
           - vm_created.records.0.power_state == "started"
 
 # ----------------------------------Job-------------------------------------------------------------------------------------
+    # SLOW 5 min
+    # boot_devices and nics are different, disk is added.
+    # VM needs to be rebooted.
+    # A running OS will accept ACPI signal.
+    # Otherwise, module waits a long time, then a force reboot happens.
     - name: Update the VM
       scale_computing.hypercore.vm: &update-vm
         vm_name: vm-integration-test-vm
@@ -129,14 +142,16 @@
         disks:
           - type: ide_cdrom
             disk_slot: 0
-            iso_name: integration-test.iso
+            iso_name: "{{ iso_name }}"
           - type: virtio_disk
             disk_slot: 1
             size: "{{ '20 GB' | human_to_bytes }}"
           - type: virtio_disk
             disk_slot: 0
         nics: []
-        boot_devices: []
+        boot_devices:
+          - type: ide_cdrom
+            disk_slot: 0
       register: result
     - ansible.builtin.assert:
         that:
@@ -147,13 +162,15 @@
       scale_computing.hypercore.vm_info: &get-vm-by-name
         vm_name: vm-integration-test-vm
       register: result
-    - ansible.builtin.assert:
+    - ansible.builtin.assert: &assert-vm-state-2
         that:
-          - result.records[0].boot_devices == []
+          - result.records[0].boot_devices | length == 1
+          - result.records[0].boot_devices.0.type == "ide_cdrom"
+          - result.records[0].boot_devices.0.disk_slot == 0
           - result.records[0].disks.0.type == "virtio_disk"
           - result.records[0].disks.0.disk_slot == 0
           - result.records[0].disks.1.type == "ide_cdrom"
-          - result.records[0].disks.1.iso_name == "integration-test.iso"
+          - result.records[0].disks.1.iso_name == "{{ iso_name }}"
           - result.records[0].disks.2.type == "virtio_disk"
           - result.records[0].disks.2.disk_slot == 1
           - result.records[0].vcpu == 2
@@ -170,20 +187,11 @@
     - name: Assert the VM has been updated Idempotence
       scale_computing.hypercore.vm_info: *get-vm-by-name
       register: result
-    - ansible.builtin.assert:
-        that:
-          - result.records[0].boot_devices == []
-          - result.records[0].disks.0.type == "virtio_disk"
-          - result.records[0].disks.0.disk_slot == 0
-          - result.records[0].disks.1.type == "ide_cdrom"
-          - result.records[0].disks.1.iso_name == "integration-test.iso"
-          - result.records[0].disks.2.type == "virtio_disk"
-          - result.records[0].disks.2.disk_slot == 1
-          - result.records[0].vcpu == 2
-          - result.records[0].memory == 536870912
+    - ansible.builtin.assert: *assert-vm-state-2
 
 # ----------------------------------Job-------------------------------------------------------------------------------------
 #
+    # SLOW 5min
     - name: Update the VM 2nd time
       scale_computing.hypercore.vm: &update-vm2
         vm_name: vm-integration-test-vm
@@ -194,7 +202,7 @@
         disks:
           - type: ide_cdrom
             disk_slot: 0
-            iso_name: integration-test.iso
+            iso_name: "{{ iso_name }}"
           - type: virtio_disk
             disk_slot: 1
             size: "{{ '20 GB' | human_to_bytes }}"
@@ -205,7 +213,9 @@
             type: RTL8139
           - vlan: 2
             type: virtio
-        boot_devices: []
+        boot_devices:
+          - type: ide_cdrom
+            disk_slot: 0
       register: result
     - ansible.builtin.assert:
         that:
@@ -216,13 +226,15 @@
       scale_computing.hypercore.vm_info: &get-vm-by-name2
         vm_name: vm-integration-test-vm
       register: result
-    - ansible.builtin.assert:
+    - ansible.builtin.assert: &assert-vm-state-3
         that:
-          - result.records[0].boot_devices == []
+          - result.records[0].boot_devices | length == 1
+          - result.records[0].boot_devices.0.type == "ide_cdrom"
+          - result.records[0].boot_devices.0.disk_slot == 0
           - result.records[0].disks.0.type == "virtio_disk"
           - result.records[0].disks.0.disk_slot == 0
           - result.records[0].disks.1.type == "ide_cdrom"
-          - result.records[0].disks.1.iso_name == "integration-test.iso"
+          - result.records[0].disks.1.iso_name == "{{ iso_name }}"
           - result.records[0].disks.2.type == "virtio_disk"
           - result.records[0].disks.2.disk_slot == 1
           - result.records[0].nics | length == 2
@@ -244,22 +256,7 @@
     - name: Assert the VM has been updated Idempotence
       scale_computing.hypercore.vm_info: *get-vm-by-name2
       register: result
-    - ansible.builtin.assert:
-        that:
-          - result.records[0].boot_devices == []
-          - result.records[0].disks.0.type == "virtio_disk"
-          - result.records[0].disks.0.disk_slot == 0
-          - result.records[0].disks.1.type == "ide_cdrom"
-          - result.records[0].disks.1.iso_name == "integration-test.iso"
-          - result.records[0].disks.2.type == "virtio_disk"
-          - result.records[0].disks.2.disk_slot == 1
-          - result.records[0].nics | length == 2
-          - result.records[0].nics.0.vlan == 1
-          - result.records[0].nics.0.type == "RTL8139"
-          - result.records[0].nics.1.vlan == 2
-          - result.records[0].nics.1.type == "virtio"
-          - result.records[0].vcpu == 2
-          - result.records[0].memory == 536870912
+    - ansible.builtin.assert: *assert-vm-state-3
 
 # ----------------------------------Cleanup--------------------------------------------------------------------------------
     - name: Delete the VM with name vm-integration-test-vm
