Rename a_vm test back to vm
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/vm/tasks/02_shutdown.yml
+++ b/tests/integration/targets/vm/tasks/02_shutdown.yml
@@ -12,7 +12,7 @@
     # ISO has no APCI
     # iso_name: "integration-test.iso"
     # Live ISO with ACPI shutdown support
-    iso_name: "Porteus-XFCE-v5.0-x86_64.iso"
+    # iso_name: "Porteus-XFCE-v5.0-x86_64.iso"
 
   block:
 # ----------------------------------Cleanup--------------------------------------------------------------------------------
