--- a/tests/integration/targets/vm/tasks/main.yml
+++ b/tests/integration/targets/vm/tasks/main.yml
@@ -7,5 +7,5 @@
 
   block:
     - include_tasks: 01_main.yml
-    - include_tasks: 02_shutdown.yml
-# TODO: add more tasks here when more issues are fixed.
+    # 02_shutdown.yml is used by separate tests (vm__shutdown_...)
+    # - include_tasks: 02_shutdown.yml
