Run VM shutdown tests as two separate tests
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/vm/tasks/02_shutdown.yml
+++ b/tests/integration/targets/vm/tasks/02_shutdown.yml
@@ -10,15 +10,18 @@
     SC_TIMEOUT: "{{ sc_timeout }}"
   vars:
     # ISO has no APCI
+    # vm_name: "vm-shutdown-test-without-acpi"
     # iso_name: "integration-test.iso"
+
     # Live ISO with ACPI shutdown support
+    # vm_name: "vm-shutdown-test-with-acpi"
     # iso_name: "Porteus-XFCE-v5.0-x86_64.iso"
 
   block:
 # ----------------------------------Cleanup--------------------------------------------------------------------------------
     - name: Delete the VM with name vm-integration-test-vm, if it exists from before
       scale_computing.hypercore.vm: &delete-vm
-        vm_name: vm-shutdown-test
+        vm_name: "{{ vm_name }}"
         state: absent
       register: result
 
@@ -34,7 +37,7 @@
 # ----------------------------------Job-------------------------------------------------------------------------------------
     - name: Create and start the VM with disks, nics and boot devices set. Attach ISO onto the VM.
       scale_computing.hypercore.vm: &create-vm
-        vm_name: vm-shutdown-test
+        vm_name: "{{ vm_name }}"
         description: Demo VM
         state: present
         tags:
@@ -71,7 +74,7 @@
           - vm_created.record.0.memory == 536870912
           - vm_created.record.0.tags == ["Xlab", "mytag1", "mytag2"]
           - vm_created.record.0.vcpu == 2
-          - vm_created.record.0.vm_name == "vm-shutdown-test"
+          - vm_created.record.0.vm_name == "{{ vm_name }}"
           - vm_created.record.0.disks | length == 2
           - vm_created.record.0.nics | length == 2
           - vm_created.record.0.nics.0.vlan == 1
@@ -101,7 +104,7 @@
 
     - name: Retrieve vm-shutdown-test Idempotence
       scale_computing.hypercore.vm_info:
-        vm_name: vm-shutdown-test
+        vm_name: "{{ vm_name }}"
       register: vm_created
     - ansible.builtin.assert:
         that:
@@ -109,7 +112,7 @@
           - vm_created.records.0.memory == 536870912
           - vm_created.records.0.tags == ["Xlab", "mytag1", "mytag2"]
           - vm_created.records.0.vcpu == 2
-          - vm_created.records.0.vm_name == "vm-shutdown-test"
+          - vm_created.records.0.vm_name == "{{ vm_name }}"
           - vm_created.records.0.disks | length == 2
           - vm_created.records.0.nics | length == 2
           - vm_created.records.0.nics.0.vlan == 1
@@ -132,7 +135,7 @@
 # ----------------------------------Job-------------------------------------------------------------------------------------
     - name: Force reboot the VM
       scale_computing.hypercore.vm: &update-vm
-        vm_name: vm-shutdown-test
+        vm_name: "{{ vm_name }}"
         state: present
         memory: "{{ '512 MB' | human_to_bytes }}"
         vcpu: 2
@@ -158,7 +161,7 @@
 
     - name: Assert the VM has been updated and rebooted
       scale_computing.hypercore.vm_info: &get-vm-by-name
-        vm_name: vm-shutdown-test
+        vm_name: "{{ vm_name }}"
       register: result
     - ansible.builtin.assert:
         that:
@@ -206,7 +209,7 @@
 # Aha. ACPI shutdown test is above. But we miss force-shutdown case.
 
 # ----------------------------------Cleanup--------------------------------------------------------------------------------
-    - name: Delete the VM with name vm-shutdown-test
+    - name: Delete the VM with name "{{ vm_name }}"
       scale_computing.hypercore.vm: *delete-vm
       register: result
 
