Do not fail-fast integration tests
At least not until we have more reliable CI jobs.
Read timeout is frequent problem.

It will be easier to retry only a few failed jobs.

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -130,6 +130,7 @@ jobs:
     runs-on: [self-hosted2]
     container: python:3.10-slim-buster
     strategy:
+      fail-fast: false
       matrix:
         # test_name: [user_info]
         test_name: ${{ fromJson(needs.integration-prepare-env.outputs.matrix) }}
@@ -164,6 +165,7 @@ jobs:
     runs-on: [self-hosted2]
     container: python:3.10-slim-buster
     strategy:
+      fail-fast: false
       matrix:
         test_name: [dns_config]
     steps:
@@ -195,6 +197,7 @@ jobs:
     runs-on: [self-hosted2]
     container: python:3.10-slim-buster
     strategy:
+      fail-fast: false
       matrix:
         test_name: [time_server, time_zone]
     steps:
